--- a/style.css
+++ b/style.css
@@ -719,10 +719,6 @@ h6{
   resize: both;
 }
 
-.flex-wrap{
-  flex-wrap: wrap;
-}
-
 .border{
   border-width: 1px;
 }
@@ -781,6 +777,18 @@ img:hover{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.si-wrapper{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.si-wrapper-content{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 input:not(input[type="radio"], input[type="checkbox"]),textarea, select{
@@ -927,7 +935,6 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   visibility: hidden;
   position: absolute;
   top: 100%;
-  left: 66.666667%;
   z-index: 10;
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -956,7 +963,12 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
 .si-navbar .mega-menu-grid{
   display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.si-navbar .mega-menu-grid .menu-post,.has-post-grid .mega-menu-grid{
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
 
 .si-navbar .menu-post h3{
@@ -1021,6 +1033,10 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
 .si-search{
   position: relative;
+  height: 50px;
+  background-color: var(--white-color);
+  display: flex;
+  align-items: center
 }
 
 .si-search button{
@@ -1036,6 +1052,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
 .si-search input{
   width: 0px !important;
+  height: 50px !important;
   position: absolute !important;
   right: 0px !important;
   top: 0px !important;
@@ -1184,7 +1201,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   }
 }
 
-.email-btn:hover{
+.email-btn:hover span{
   color: var(--dark-color);
 }
 
@@ -1349,9 +1366,16 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 .post-content_header{
   margin-top: 0.5rem;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 1rem;
+}
+
+@media (min-width: 425px){
+  .post-content_header{
+    justify-content: space-between;
+  }
 }
 
 .post-categories{
@@ -1368,8 +1392,16 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 .post-content_footer{
   color: var(--secondary-color);
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   gap: 0.25rem
+}
+
+@media (min-width: 425px){
+  .post-content_footer{
+    justify-content: flex-start;
+  }
 }
 
 .overlay-post .post-content_footer{
@@ -1777,6 +1809,10 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   padding-bottom: 0.5rem;
 }
 
+.post-axcerpt{
+  padding-bottom: 0.5rem;
+}
+
 .not-found{
   text-align: center;
 }
@@ -1943,37 +1979,42 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   align-items: stretch;
 }
 
-.main-content,.main-img{
+.main-content,.main-img,.newsletter-content,.newsletter-img{
   width: 100%;
 }
 
 @media (min-width: 768px){
-  .main-content,.main-img{
+  .main-content,.main-img,.newsletter-content,.newsletter-img{
     width: 50%;
   }
 }
 
-.main-content{
+.main-content,.newsletter-content{
   margin-bottom: 1.25rem;
 }
 
 @media (min-width: 768px){
-  .main-content{
+  .main-content,.newsletter-content{
     margin-bottom: 0px;
     padding-right: 2rem;
   }
 }
 
 @media (min-width: 1024px){
-  .main-content{
+  .main-content,.newsletter-content{
     padding-right: 3.5rem;
   }
 }
 
-.main-img img{
+.main-img img,.newsletter-img img{
   --tw-shadow: 0 0 #0000 !important;
   --tw-shadow-colored: 0 0 #0000 !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.newsletter-content .mailpoet_form{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .info-box{
@@ -2071,8 +2112,6 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 }
 
 .author-avatar img{
-  -o-object-fit: cover;
-     object-fit: cover;
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2178,6 +2217,210 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   gap: 0.25rem
 }
 
+.about-section{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.about-section .universal-header .title{
+  color: var(--dark-color);
+}
+
+.about-section .si-wrapper{
+  background-color: var(--light-color);
+  border-radius: 50px;
+  padding: 2rem
+}
+
+@media (min-width: 768px){
+  .about-section .si-wrapper{
+    padding: 3.5rem;
+  }
+}
+
+.cards-grid{
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  gap: 1.25rem;
+}
+
+@media (min-width: 640px){
+  .cards-grid{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+.card{
+  background-color: var(--white-color);
+  border-radius: 1.5rem;
+  padding: 1.5rem;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
+.comments-title{
+  border-bottom: 1px solid var(--border-color);
+  position: relative;
+  margin-bottom: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  text-transform: uppercase
+}
+
+.comments-title::first-letter{
+  color: var(--primary-color);
+}
+
+.comments-title::after{
+  content: "";
+  height: 2px;
+  width: 60px;
+  bottom: -1px;
+  background-color: var(--primary-color);
+  position: absolute;
+  left: 0px;
+  display: block
+}
+
+.comment-list{
+  padding-left: 0px;
+}
+
+.comment-meta{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 1rem;
+}
+
+.comment-awaiting-moderation{
+  width: 100%;
+}
+
+.comment-meta .fn{
+  font-family: var(--heading-font);
+  padding-left: 1.25rem;
+  padding-right: 0.25rem;
+  font-weight: 600
+}
+
+.comment-content,.comment-body .reply{
+  margin-left: 5rem;
+}
+
+.comment-content{
+  padding-bottom: 1rem;
+}
+
+.comment-body .reply{
+  border-bottom: 1px solid var(--border-color);
+  position: relative;
+  margin-bottom: 1rem
+}
+
+.comment-body .reply:after{
+  content: "";
+  height: 1px;
+  width: 50px;
+  bottom: -1px;
+  background-color: var(--primary-color);
+  position: absolute;
+  right: 0px;
+  display: block
+}
+
+.comment-body .reply a{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.comment-author{
+  display: flex;
+  align-items: center;
+}
+
+.comment-author .avatar{
+  border-radius: 9999px;
+}
+
+.comment-body .reply{
+  text-align: end;
+}
+
+.comment .children{
+  padding-left: 0.75rem;
+}
+
+@media (min-width: 640px){
+  .comment .children{
+    padding-left: 1.5rem;
+  }
+}
+
+.comment-metadata{
+  margin-left: auto;
+}
+
+.comment-metadata a{
+  color: var(--secondary-color);
+}
+
+#commentform {
+  background-color: var(--light-color);
+  gap: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1.5rem
+}
+
+@media (min-width: 768px){
+  #commentform{
+    padding: 2.5rem;
+  }
+}
+
+#commentform > *{
+  width: 100%;
+}
+
+.comment-form-email, .comment-form-author, .comment-form-url {
+  width: 100% !important;
+}
+
+.comment-form-cookies-consent{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.comment-reply-title{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+#cancel-comment-reply-link{
+  font-size: 1rem;
+  line-height: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+
+.comment-respond{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 @media screen and (max-width: 600px){
   .admin-bar #si-header.header-fixed, .admin-bar #si-sidebar{
     top: 0 !important;
@@ -2197,6 +2440,10 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
   .contact-content{
     margin-top: -200px;
+  }
+
+  .comment-form-email, .comment-form-author, .comment-form-url {
+    width: calc(100% / 3 - 14px) !important;
   }
 }
 
