--- a/style.css
+++ b/style.css
@@ -2508,14 +2508,11 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 }
 
 .page-content .search-form input{
-  border-top-right-radius: 0px !important;
-  border-bottom-right-radius: 0px !important;
+  border-radius: 0px !important;
 }
 
 .page-content .search-form button{
   background-color: var(--primary-color) !important;
-  border-top-right-radius: 1.5rem !important;
-  border-bottom-right-radius: 1.5rem !important;
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
   padding-left: 1.25rem !important;
@@ -2528,6 +2525,10 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
 .page-content .search-form button:hover{
   background-color: var(--primary-color) !important;
+}
+
+html.translated-rtl .email-btn{
+  padding-right: 5rem;
 }
 
 @media screen and (max-width: 600px){
