--- a/style.css
+++ b/style.css
@@ -2166,7 +2166,6 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   flex-wrap: wrap;
   align-items: center;
   gap: 1.25rem;
-  padding: 1.25rem;
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2728,6 +2727,10 @@ html.translated-rtl[lang=ur] #announcement font {
 
 @media screen and (min-width: 1440px){
   .contact-widget{
+    width: calc(100% / 5);
+  }
+
+  .wrapper-widget {
     width: calc(100% / 5);
   }
 }
