--- a/tailwind.css
+++ b/tailwind.css
@@ -231,13 +231,23 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
     @apply opacity-100 visible
 }
 #si-sidebar{
-    @apply fixed top-0 left-0 bottom-0 h-screen overflow-y-auto z-20 invisible opacity-0 -translate-x-full
+    top: 120px;
+    @apply fixed left-0 bottom-0 h-screen overflow-y-auto z-20 invisible opacity-0 -translate-x-full
 }
 #si-sidebar.active{
     @apply visible opacity-100 translate-x-0
 }
 .admin-bar #si-sidebar{
-    @apply top-11 md:top-8
+    @apply top-40 md:top-36
+}
+.admin-bar .header-fixed+#content #si-sidebar{
+    @apply top-28 md:top-40
+}
+.admin-bar .header-fixed #si-sidebar{
+    @apply top-28
+}
+.header-fixed+#content #si-sidebar{
+    top: 77px ;
 }
 #sidebar-main-menu a{
     @apply block py-3
@@ -997,13 +1007,11 @@ html.translated-rtl[lang=ur] #announcement font {
     margin: 0 !important;
 }
 @media screen and (max-width: 600px){
-    .admin-bar #si-header.header-fixed, .admin-bar #si-sidebar{
+    .admin-bar #si-header.header-fixed{
         top: 0 !important;
     }
-    #gt_float_wrapper{
-        left: 50%;
-        right: unset;
-        transform: translateX(-50%);
+    .gt_float_switcher .gt-selected .gt-current-lang{
+        padding: 0px !important;
     }
 }
 @media screen and (min-width: 425px){
