--- a/tailwind.css
+++ b/tailwind.css
@@ -66,7 +66,7 @@ img{
 .si-wrapper-content {
     @apply flex justify-between items-center flex-wrap
 }
-input:not(input[type="radio"], input[type="checkbox"]),textarea, select{
+input:not(input[type="radio"], input[type="checkbox"], input[type="submit"]),textarea, select{
     border: 1px solid var(--border-color);
     @apply w-full h-10 outline-none transition-all
 }
@@ -84,6 +84,8 @@ input[type="submit"],form button, .universal-btn{
     color: var(--white-color);
     border: 1px solid var(--primary-color) !important;
     width: auto !important;
+    outline: none !important;
+    transition: .2s;
     cursor: pointer;
 }
 .universal-btn{
@@ -143,7 +145,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 .has-sub-menu .has-dropdown > a,#sidebar-main-menu .menu-item-has-children > a{
     @apply justify-between
 }
-.si-navbar .has-grid-menu > a:after,.si-navbar .has-post-grid > a:after,.si-navbar .has-sub-menu > a:after,.si-navbar .has-sub-menu .has-dropdown > a:after, #sidebar-main-menu .menu-item-has-children > a:after, .si-navbar .has-sub-menu .sub-menu > li > a:after{
+.si-navbar .has-grid-menu > a:after,.si-navbar .has-post-grid > a:after,.si-navbar .has-sub-menu > a:after,.si-navbar .has-sub-menu .has-dropdown > a:after, #sidebar-main-menu .menu-item-has-children > a:after{
     content: "\276F";
     color: var(--primary-color);
     @apply inline-block rotate-90 text-xs ml-2 font-thin
@@ -179,7 +181,10 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
     @apply text-sm font-normal
 }
 .si-navbar .mega-menu{
-    @apply flex items-center justify-center overflow-hidden
+    @apply flex items-center overflow-hidden
+}
+.si-navbar .has-post-grid .mega-menu{
+    @apply justify-center
 }
 .si-navbar .mega-menu > ul{
     @apply w-full
